@@ -388,6 +388,7 @@ namespace aux {
 		TORRENT_SETTING(boolean, drop_skipped_requests)
 		TORRENT_SETTING(boolean, low_prio_disk)
 		TORRENT_SETTING(integer, local_service_announce_interval)
+		TORRENT_SETTING(integer, dht_announce_interval)
 		TORRENT_SETTING(integer, udp_tracker_token_expiry)
 		TORRENT_SETTING(boolean, volatile_read_cache)
 		TORRENT_SETTING(boolean, guided_read_cache)
@@ -410,6 +411,8 @@ namespace aux {
 		TORRENT_SETTING(boolean, no_recheck_incomplete_resume)
 		TORRENT_SETTING(boolean, anonymous_mode)
 		TORRENT_SETTING(integer, tick_interval)
+		TORRENT_SETTING(boolean, report_web_seed_downloads)
+		TORRENT_SETTING(integer, share_mode_target)
 		TORRENT_SETTING(integer, upload_rate_limit)
 		TORRENT_SETTING(integer, download_rate_limit)
 		TORRENT_SETTING(integer, local_upload_rate_limit)
