@@ -6,6 +6,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix a bunch of typos in python bindings
 	* make get_settings available in the python binding regardless of deprecated functions
 	* fix typo in python settings binding
 	* fix possible dangling pointer use in peer list
